Version 0.3.0 - ???
  * splitted buildups.py into mtext.py and rect.py
Version 0.2.0 - 21 March 2010
  * Alpha status - api may change
Version 0.1.0 - 14 March 2010
  * Pre-Alpha status
  * Initial release